project layout bug fix

--- a/src/components/Sections/projects.scss
+++ b/src/components/Sections/projects.scss
@@ -7,7 +7,7 @@
   gap: 50px;
   background-image: url(../../../stars.png);
   background-size: cover;
-  background-position: bottom;
+  // overflow: hidden;
 
   .wrapper {
     display: flex;
